Update 's8zdfvnot-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4fd6cb3c77232b4909d7e329f125ec998275cf88@sha256:983c435f06b6f71de964436ce7b3b457aa9289451886753b585e09a8be96612c

--- a/components/s8zdfvnot-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/s8zdfvnot-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s8zdfvnot-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4fd6cb3c77232b4909d7e329f125ec998275cf88@sha256:983c435f06b6f71de964436ce7b3b457aa9289451886753b585e09a8be96612c
+          name: container-image
